Revisions from BK's comprehensive read

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -70,7 +70,7 @@ keywords = {}}
 @Article{Dunham2014,
 author = {Dunham, K. and Dinkelacker, S. and Miller, J. }, 
 title = {{A stage-based population model for American alligators in northern latitudes}}, 
-journal = {Jour. Wild. Mgmt.}, 
+journal = {J Wildl Manag}, 
 volume = {78}, 
 issue = {3}, 
 pages = {440-447}, 
@@ -262,7 +262,7 @@ keywords = {}}
 @Article{McCarthy2008,
 author = {McCarthy, D. and Townley, S. and Hodgson, D. }, 
 title = {{On second order sensitivity for stage-based population projection matrix models}}, 
-journal = {Theoretical Population Biology}, 
+journal = {Theor Popul Biol}, 
 volume = {74}, 
 issue = {1}, 
 pages = {68-73}, 
@@ -353,7 +353,7 @@ url = {}}
 @Article{Muller2008a,
 author = {Muller, D. A. and Sharma, M. D. and Reimann, P. }, 
 title = {{Raising cognitive load with linear multimedia to promote conceptual change}}, 
-journal = {Sci. Ed.}, 
+journal = {Sci Educ}, 
 volume = {92}, 
 issue = {2}, 
 pages = {278-296}, 
@@ -367,7 +367,7 @@ keywords = {}}
 @Article{Muller2008,
 author = {Muller, D. A. and Bewes, J. and Sharma, M. D. and Reimann, P. }, 
 title = {{Saying the wrong thing: improving learning with multimedia by including misconceptions: Misconception-based multimedia instruction}}, 
-journal = {Journal of Computer Assisted Learning}, 
+journal = {J Comput Assist Learn}, 
 volume = {24}, 
 issue = {2}, 
 pages = {144-155}, 
@@ -380,8 +380,8 @@ keywords = {}}
 
 @Article{Stubben2007,
 author = {Stubben, C. and Milligan, B. }, 
-title = {{Estimating and Analyzing Demographic Models Using the popbio Package in R}}, 
-journal = {J. Stat. Soft.}, 
+title = {{Estimating and analyzing demographic models using the popbio package in R}}, 
+journal = {J Stat Soft}, 
 volume = {22}, 
 issue = {}, 
 pages = {11}, 
@@ -442,7 +442,7 @@ issue = {},
 pages = {537-541}, 
 year = {2001}, 
 abstract = {}, 
-doi = {}, 
+doi = {10.1038/35107054}, 
 location = {}, 
 keywords = {}}
 
